--- a/index.html
+++ b/index.html
@@ -10,36 +10,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet"> 
 
-	<!-- Iconos Font Awesome -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
-
 	<script src="js/scripts.js"></script>
-	<title>Aplicacion Mashup</title>
+	<title>Diario de clase</title>
 </head>
 <body data-spy="scroll" data-target="#navbar-example">
 	<!-- Header -->
 	<div id="seccion-1" class="container-fluid d-flex align-items-center justify-content-center header">
   		<h1 class="display-1">Diario de clase</h1>	
 	</div>
-	
-	<!-- Barra de Navegacion -->
-	<nav id="navbar-example" class="navbar fixed-top  bg-transparent navbar-expand-sm">
-		<i class="fa fa-bicycle" style="font-size:36px; color:blue"></i>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-		</button>
-  		<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-		<div class="navbar-nav mr-auto ml-auto text-center barra nav-pills">
-      		<a data-scroll class="nav-item nav-link active mx-3" href="#seccion-1">Seccion 1</a>
-      		<a data-scroll class="nav-item nav-link mx-3" href="#seccion-2">Seccion 2</a>
-      		<a data-scroll class="nav-item nav-link mx-3" href="#seccion-3">Seccion 3</a>
-      		<a data-scroll class="nav-item nav-link mx-3" href="#seccion-4">Seccion 4</a>
-	    </div>
-    	</div>
-	</nav>
-
-	
-
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
