--- a/index.html
+++ b/index.html
@@ -1,38 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
-
-	<!-- Fuentes -->
-	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet"> 
-
-	<script src="js/scripts.js"></script>
-	<title>Diario de clase</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Diario de clase</title>
 </head>
-<body data-spy="scroll" data-target="#navbar-example">
-	<!-- Header -->
-	<div id="seccion-1" class="container-fluid d-flex align-items-center justify-content-center header">
-  		<h1 class="display-1">Diario de clase</h1>	
-	</div>
-	<!-- Scripts -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	<!-- Cambiar color navbar -->
-	<script>
-		$(window).scroll(function() {
-	    	if ($("#navbar-example").offset().top > 631) {
-	    		$("#navbar-example").removeClass("bg-transparent");
-	            $("#navbar-example").addClass("bg-white");
-	        }
-	        else {
-	            $("#navbar-example").removeClass("bg-white");
-	        }
-	    });
-	</script>
+<body>
+    <h1>Diario de clase</h1>
+    <h2>Juan Sebastian Paez Arroyo</h2>
 </body>
 </html>
