--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
+          <h2 class="text-white mt-0">Presentación Curso</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <p class="text-white-50 mb-4">En el curso de Ingenieria de Software 2 se cubrieron temas como metodologias de desarrollo y tecnologias 
+            que facilitan el desarrollo de apps y servicios.</p>
         </div>
       </div>
     </div>
@@ -90,30 +90,34 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <i class="far fa-gem fa-5x text-primary"></i>
             <h3 class="h4 mb-2">Ruby and Rails</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <p class="text-muted mb-0">Ruby on Rails, también conocido como RoR o Rails, es un framework de aplicaciones web de código abierto escrito en el lenguaje de programación Ruby, 
+              siguiendo el paradigma del patrón Modelo Vista Controlador.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Metodologia Scrum</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+            <i class="fab fa-react fa-5x text-primary"></i>
             <h3 class="h4 mb-2">React</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <p class="text-muted mb-0">React es una biblioteca Javascript de código abierto diseñada para crear interfaces de usuario con el objetivo de facilitar el 
+              desarrollo de aplicaciones en una sola página</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+            <i class="fas fa-people-carry fa-5x text-primary"></i>
+            <h3 class="h4 mb-2">Metodologia Scrum</h3>
+            <p class="text-muted mb-0">Scrum es un marco de trabajo para desarrollo ágil de software. Es un proceso en el que se aplican de manera regular un conjunto de buenas prácticas para trabajar colaborativamente, 
+              en equipo y obtener el mejor resultado posible de proyectos</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-heart fa-4x text-primary mb-4"></i>
             <h3 class="h4 mb-2">Trabajo en equipo</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <p class="text-muted mb-0">En la realizacion del proyecto aprendi a trabajar en equipo 
+              y la importancia de esto para lograr el cumplimiento de los objetivos de un proyecto</p>
           </div>
         </div>
       </div>
@@ -125,79 +129,91 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/scrum.jpg">
+            <img class="img-fluid" src="img/scrum.jpg" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
+              <div class="project-name">
                 Metodologia Scrum
               </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/amazon.png">
+            <img class="img-fluid" src="img/amazon.png" alt="">
+            <div class="portfolio-box-caption">
               <div class="project-name">
-                Project Name
+                AWS Amazon
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+          <a class="portfolio-box" href="img/arquitectura.jpeg">
+            <img class="img-fluid" src="img/arquitectura.jpeg" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
               <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
                 Arquitectura Empresarial
               </div>
-              <div class="project-name">
-                Project Name
-              </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="img/git.png">
+            <img class="img-fluid" src="img/git.png" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
               <div class="project-name">
-                Project Name
+                Git And Github
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+          <a class="portfolio-box" href="img/motor.jpg">
+            <img class="img-fluid" src="img/motor.jpg" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
               <div class="project-name">
-                Project Name
+                Motor de Procesos
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+          <a class="portfolio-box" href="img/rest.png">
+            <img class="img-fluid" src="img/rest.png" alt="">
             <div class="portfolio-box-caption p-3">
-              <div class="project-category text-white-50">
-                Category
-              </div>
               <div class="project-name">
-                Project Name
+                API REST
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/dcoker.png">
+            <img class="img-fluid" src="img/dcoker.png" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-name">
+                DOCKER
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/camunda.jpg">
+            <img class="img-fluid" src="img/camunda.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-name">
+                CAMUNDA
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/flask.png">
+            <img class="img-fluid" src="img/flask.png" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-name">
+                FLASK
               </div>
             </div>
           </a>
